Correccion de pequeña errata

--- a/Aprendizaje_profundo_con_información_clinico-patologica/aprendizaje_clinico.ipynb
+++ b/Aprendizaje_profundo_con_información_clinico-patologica/aprendizaje_clinico.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "8ts_8HYPQczu"
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3UKS4z1EQczv"
       },
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "a9x9MSHpQczw",
         "colab": {
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "pVloEpOWQczw",
         "colab": {
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "VzK9d7scQczw",
         "colab": {
@@ -260,7 +260,7 @@
         },
         "outputId": "366b0799-c939-4805-bcba-21cfed82419c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         },
         "outputId": "e4f8cd40-3b0d-42f8-a969-ce699b8bc323"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "M-6JmQNwQczx"
       },
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "b6GYgWCzQczx",
         "colab": {
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "8rKgTn0cQczx",
         "colab": {
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "mB8gAS1EQczx"
       },
@@ -991,19 +991,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.feature_selection import SelectKBest, mutual_info_classif\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
-        "from sklearn.metrics import roc_curve, auc, accuracy_score\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Dropout\n",
-        "from keras.optimizers import Adam\n",
-        "from sklearn.metrics import roc_auc_score\n",
-        "from imblearn.under_sampling import RandomUnderSampler\n",
-        "import pandas as pd\n",
-        "\n",
         "def evaluar_modelo(num_k, X, y, mejor_config, use_cross_validation=False):\n",
         "    \"\"\"\n",
         "    Esta función evalúa el modelo con la selección de las mejores 'k' características y\n",
@@ -1048,7 +1035,7 @@
         "    all_y_true = []\n",
         "    all_y_pred = []\n",
         "\n",
-        "    if use_cross_validation:\n",
+        "    if use_cross_validation: (más robusta pero puede dar problemas con los index)\n",
         "        kfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
         "\n",
         "        for train_index, val_index in kfold.split(X_selected_std, y):\n",
@@ -1090,7 +1077,7 @@
         "        print(f'ROC AUC: {roc_auc:.4f}')\n",
         "\n",
         "    else:\n",
-        "        # Entrenamiento sin validación cruzada\n",
+        "        # Entrenamiento sin validación cruzada (da menos problemas pero es menos robusta)\n",
         "        X_train, X_test, y_train, y_test = train_test_split(X_selected_std, y, test_size=0.2, stratify=y, random_state=2)\n",
         "\n",
         "        model.fit(X_train, y_train, epochs=epochs, batch_size=batch_size, validation_split=validation_split, verbose=0)\n",
@@ -1114,7 +1101,7 @@
         "        print(f'Accuracy: {accuracy:.4f}')\n",
         "        print(f'ROC AUC: {roc_auc:.4f}')\n",
         "\n",
-        "# Llamar a la función `evaluar_modelo`\n",
+        "###########################################################################################\n",
         "evaluar_modelo(num_k=mejor_k, X=X, y=y, mejor_config=best_config, use_cross_validation=False)\n"
       ],
       "metadata": {
@@ -1125,7 +1112,7 @@
         },
         "outputId": "4791208a-ca6e-4a0c-f8dd-8011cfda995f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
